--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
         <img src="images/edit.png" alt="Edit Icon" />Create Notes
       </button>
 
-      <div class="notes-container">
-        <!-- <p contenteditable="true" class="input-box">
-          <img src="images/delete.png" alt="Delete Icon" />
-        </p> -->
-      </div>
+      <div class="notes-container"></div>
     </div>
 
     <script src="script.js"></script>
